[gd_scene load_steps=2 format=3 uid="uid://utx2nh5c7676"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_uwtqg"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_uwtqg")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32

[node name="PlayerPoints" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="EnemyPoints" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Buttons" type="HBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
offset_left = 462.0
offset_top = 416.0
offset_right = 692.0
offset_bottom = 456.0
theme_override_constants/separation = 30
alignment = 1

[node name="Restart" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Restart"

[node name="Quit" type="Button" parent="Buttons"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Quit"

[node name="GameOverLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -271.5
offset_top = -68.5
offset_right = 271.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 100
text = "Game Over"

[node name="CongratulationsLabel" type="Label" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -222.0
offset_top = -68.5
offset_right = 222.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 100
text = "You won!"

[connection signal="pressed" from="Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Buttons/Quit" to="." method="_on_quit_pressed"]
